--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <title>Portfolio - Matthew Lewis</title>
-        <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
+        <!-- Font Awesome icons-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
@@ -40,7 +39,7 @@
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">Army linguist and 3D animator turned software dev</p>
+                        <p class="text-white-75 font-weight-light mb-5">IoT software engineer with an emphasis on 2D / 3D visualization and Human / Computer Interaction Design.</p>
                     </div>
                 </div>
             </div>
@@ -53,30 +52,30 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fab fa-4x fa-html5 text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">HTML5</h3>
-                            <p class="text-muted mb-0">Blurb about my skills in this tech</p>
+                            <i class="fab fa-4x fa-angular text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">Angular</h3>
+                            <p class="text-muted mb-0">My primary JavaScript Framework</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fab fa-4x fa-js-square text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Javascript</h3>
-                            <p class="text-muted mb-0">Blurb about my skills in this tech</p>
+                            <p class="text-muted mb-0">Naturally</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fab fa-4x fa-python text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Python</h3>
-                            <p class="text-muted mb-0">Blurb about my skills in this tech</p>
+                            <p class="text-muted mb-0">Web scraping and backend work</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-copyright text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">C #</h3>
-                            <p class="text-muted mb-0">Blurb about my skills in this tech</p>
+                            <h3 class="h4 mb-2">C#</h3>
+                            <p class="text-muted mb-0">Both in .NET and Unity</p>
                         </div>
                     </div>
                 </div>
@@ -92,7 +91,6 @@
                 <i title="Ubuntu" class="mr-3 fab fa-2x fa-ubuntu text-primary mb-4"></i>
                 <i title="Unity Engine" class="mr-3 fab fa-2x fa-unity text-primary mb-4"></i>
                 <i title="Figma" class="mr-3 fab fa-2x fa-figma text-primary mb-4"></i>
-                <i title="Discord Oauth2" class="mr-3 fab fa-2x fa-discord text-primary mb-4"></i>
                 <i title="Bootstrap" class="mr-3 fab fa-2x fa-bootstrap text-primary mb-4"></i>
             </div>
         </section>
@@ -100,6 +98,15 @@
         <div id="portfolio">
             <div class="container-fluid p-0">
                 <div class="row no-gutters">
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.png">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.png" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Business Scale IoT Mapping</div>
+                                <div class="project-name">Airista Sofia</div>
+                            </div>
+                        </a>
+                    </div>
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.png">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.png" alt="" />
@@ -166,28 +173,28 @@
                         <div class="mt-5">
                             <i class="fab fa-4x fa-github text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Github</h3>
-                            <p class="text-muted mb-0">github.com/MatthewKLewis</p>
+                            <p class="text-muted mb-0" style="font-size: 12px;">github.com/MatthewKLewis</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fab fa-4x fa-linkedin-in text-primary mb-4"></i>
                             <h3 class="h4 mb-2">LinkedIn</h3>
-                            <p class="text-muted mb-0">www.linkedin.com/in/matthew-lewis-4695391b5/</p>
+                            <p class="text-muted mb-0" style="font-size: 12px;">www.linkedin.com/in/matthew-lewis-4695391b5/</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-envelope text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Email</h3>
-                            <p class="text-muted mb-0">matthew.knight.lewis@gmail.com</p>
+                            <p class="text-muted mb-0" style="font-size: 12px;">matthew.knight.lewis@gmail.com</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-info text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Indeed Resume</h3>
-                            <p class="text-muted mb-0">my.indeed.com/p/matthewl-r9gbky9</p>
+                            <p class="text-muted mb-0" style="font-size: 12px;">my.indeed.com/p/matthewl-r9gbky9</p>
                         </div>
                     </div>
                 </div>
