--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <nav class="navbar">
             <div class="nav-left">
                 <div id="homeButton" class="nav-button glass">Matthew Lewis</div>
-                <p id="stats">Animation Offset: 0.00</p>
+                <p style="opacity: 20%;" id="stats">Animation Offset: 0.00</p>
             </div>
             <div class="nav-right">
                 <div id="skillsButton" class="nav-button glass">Skills</div>
@@ -46,57 +46,57 @@
                 <div class="grid-item glass">
                     <i style="font-size: 60px;" class="fab fa-js-square"></i>
                     <span class="grid-text">
-                        <span>Angular</span>
-                        <p>I have skills in this javascript platform.</p>
+                        <span>JavaScript</span>
+                        <p>The way of the web.</p>
                     </span>
                 </div>
                 <div class="grid-item glass">
                     <i style="font-size: 60px;" class="fab fa-python"></i>
                     <span class="grid-text">
-                        <span>Angular</span>
-                        <p>I have skills in this javascript platform.</p>
+                        <span>Python</span>
+                        <p>Webscraping and Back End experience.</p>
                     </span>
                 </div>
                 <div class="grid-item glass">
                     <i style="font-size: 60px;" class="fab fa-git"></i>
                     <span class="grid-text">
-                        <span>Angular</span>
-                        <p>I have skills in this javascript platform.</p>
+                        <span>Git</span>
+                        <p>Version control.</p>
                     </span>
                 </div>
                 <div class="grid-item glass">
                     <i style="font-size: 60px;" class="fab fa-github"></i>
                     <span class="grid-text">
-                        <span>Angular</span>
-                        <p>I have skills in this javascript platform.</p>
+                        <span>Github</span>
+                        <p>We're on it right now.</p>
                     </span>
                 </div>
                 <div class="grid-item glass">
                     <i style="font-size: 60px;" class="fab fa-figma"></i>
                     <span class="grid-text">
-                        <span>Angular</span>
-                        <p>I have skills in this javascript platform.</p>
+                        <span>Figma</span>
+                        <p>UX/UI is dead. Long live UX/UI.</p>
                     </span>
                 </div>
                 <div class="grid-item glass">
                     <i style="font-size: 60px;" class="fab fa-bootstrap"></i>
                     <span class="grid-text">
-                        <span>Angular</span>
-                        <p>I have skills in this javascript platform.</p>
+                        <span>Bootstrap</span>
+                        <p>The best in CSS libraries.</p>
                     </span>
                 </div>
                 <div class="grid-item glass">
                     <i style="font-size: 60px;" class="fab fa-unity"></i>
                     <span class="grid-text">
-                        <span>Angular</span>
-                        <p>I have skills in this javascript platform.</p>
+                        <span>Unity</span>
+                        <p>VR, 2D, 3D.</p>
                     </span>
                 </div>
                 <div class="grid-item glass">
                     <i style="font-size: 60px;" class="fas fa-cube"></i>
                     <span class="grid-text">
-                        <span>Angular</span>
-                        <p>I have skills in this javascript platform.</p>
+                        <span>Maya</span>
+                        <p>I have been modeling since 2006.</p>
                     </span>
                 </div>
             </div>
@@ -108,15 +108,19 @@
 
                 <div class="grid-item-contact glass-dark">
                     <span>Contact Info:</span>
-                    <p>Email</p>
-                    <p>Phone</p>
-                    <p>Location</p>
+                    <ul>
+                        <li>Email</li>
+                        <li>Phone</li>
+                        <li>Location</li>
+                    </ul>
                 </div>
 
                 <div class="grid-item-contact glass-dark">
                     <span>Internet Contact Info:</span>
-                    <p>LinkedIn</p>
-                    <p>Github</p>
+                    <ul>
+                        <li>LinkedIn</li>
+                        <li>GitHub</li>
+                    </ul>
                 </div>
                 <div class="grid-item-contact glass-dark scroll-y">
                     <span>Current Design Rant (10/26/2021):</span>
@@ -131,7 +135,7 @@
                     </p>
                 </div>
             </div>
-            <p style="color: #5f5f5f; text-align: center;">Copyright 2021 Matthew Lewis</p>
+            <p style="color: #5f5f5f; text-align: center;">© 2021 Matthew Lewis</p>
         </div>
     </div>
     <script src="./script.js"></script>
