--- a/art/index.html
+++ b/art/index.html
@@ -5,8 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Art</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Art</h1>
+    <div class="grid">
+
+        <div class="column">
+            <img src="../images/canvas.png">
+            <img src="../images/dzdoc.jpg">
+            <img src="../images/lamb.jpg">
+            <img src="../images/menwho.jpg">
+            <img src="../images/mern.PNG">
+        </div>
+        
+        <div class="column">
+            <img src="../images/lamb.jpg">
+            <img src="../images/canvas.png">
+            <img src="../images/dzdoc.jpg">
+            <img src="../images/mern.PNG">
+            <img src="../images/menwho.jpg">
+        </div>
+
+        <div class="column">
+            <img src="../images/dzdoc.jpg">
+            <img src="../images/canvas.png">
+            <img src="../images/menwho.jpg">
+            <img src="../images/mern.PNG">
+            <img src="../images/lamb.jpg">
+        </div>
+
+    </div>
 </body>
 </html>
